# LRU2Q_Cache

./: .gitignore  CMakeLists.txt  README.md
comparision/: compare.py
idcache/: CMakeLists.txt  mainId.cpp
idcache/include/: ideal_cache.hpp
idcache/src/: ideal_cache.cpp
include/: containers.hpp
lru2q/: CMakeLists.txt  main2Q.cpp
lru2q/include/: LRU-2Q.hpp  LRU.hpp
lru2q/src/: LRU.cpp  LRU2Q.cpp
